# test-rust-db

test-orm/: Cargo.toml  build.rs
test-orm/entity/: Cargo.toml
test-orm/entity/src/: bytecode_parts.rs  bytecodes.rs  files.rs  parts.rs  source_files.rs  sources.rs  verified_contracts.rs
test-orm/migration/src/: lib.rs  m20220101_000001_initial.rs
test-orm/proto/: api_config_http.yaml  test.proto
test-orm/src/: main.rs  server.rs
test-sqlx/: Cargo.toml
test-sqlx/migrations/: 20221104075104_initital.sql
test-sqlx/src/: lib.rs  main.rs
test-sqlx/swagger/: test.swagger.yaml
